<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="version_code">11003</string>
    <string name="version_name">1.1.003</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="go_back">Go back</string>
    <string name="Save">Save</string>
    <string name="Load">Load</string>
	<string name="Delete">Delete</string>
	<string name="Play">PLAY!</string>
    <string name="sd_not_found">Cannot access SD storage!</string>
    <string name="extra_player_number">extra_player_number</string>

    <!-- Release Notes -->
    <string name="whats_new">What\'s new in %s</string>
    <string name="release_notes_key">releaseNotes</string>
    <string name="release_notes_string">releaseNotesStringId_</string>
    <string name="release_notes">* White score plates.\n* Bug fixes.</string>

    <!-- Load Player -->
    <string name="load_player">Load Player (select which player slot to load in, then click on the player you want to load)</string>
    <string name="select_players_text">Who is playing?\n Touch a name to edit.</string>
    
    <string name="no_saved_players">No player currently saved. You can save player profiles through the edit option in the menu.</string>

    <!-- Pick Color -->
    <string name="pick_color_text">Select the color you want your life total and buttons to use.</string>
    <string name="pick_color_preview">Your life total will show like this: - 20 +</string>
    <string name="more_colors">More colors</string>

    <!-- Edit Player -->
    <string name="edit_player">Edit Profiles</string>
	<string name="pick_color">Pick color</string>
	<string name="keyboard_go">Go</string>
	<string name="apply">Apply</string>
    <string name="name">Name:</string>
	<string name="apply_confirmation">This will apply changes but not save anything.</string>
	
	<!-- Delete Players -->
	<string name="delete_profiles">Are you sure you want to delete the following profile(s)?</string>
	
    <!-- Pick Images -->
	<string name="pick">Pick</string>
	<string name="crop">Crop</string>
    <string name="pick_dialog_message">Do you want to pick an existing picture or crop a new one?</string>
    <string name="pick_large_title">Pick large image</string>
    <string name="pick_tall_title">Pick tall image</string>
	<string name="pick_image_top_text">Click on the two boxes bellow to select images for you custom background. Large for landscape mode (holding the device sideways).
    Tall for portrait mode (holding it straight).</string>
    <string name="pick_image_bottom_text">Select "pick" if you have an image of the correct size or want yours stretched, "crop"
    if you want to cut into an image for better fit.</string>
	
    <!-- Save Player -->
    <string name="save_player">Save Player</string>
    <string name="save_confirmation">Do you want to save current player?</string>
    <string name="save_goback_confirmation">If you go back now your changes will be lost next time you load your profile. You can still cancel and save if needed.</string>
    <string name="save_overwrite">\nIt will replace existing profile:\n</string>
    <string name="save_error_empty_name">Please enter a player name before saving.</string>
    
    <!-- Game Layout -->
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!-- First Use Wizard -->
    <string name="close_wizard_title">Close</string>
    <string name="close_wizard_message">Leave this tutorial?</string>
    <string name="never_show">Don\'t show again</string>
    <string name="wizard_text">Welcome to %s! You can access the toolbox by clicking the gear icon
        in the middle.</string>
    <string name="wizard_text_middle">Tools are corresponding to the icons: new game, roll dice,
        flip a coin, load profiles, edit profiles, flip player 2.</string>
    <string name="wizard_text_part2">This app is still in Beta so your feedback is welcome! Check
        out edit player and the draft organizer too! Thanks for your support :) Bullzzai</string>
    <string name="app_name">MTG20 LifeCounter</string>
    
    <string name="wiz_text_1">Greetings Planeswalker. Welcome to MTG20. Let\’s take a quick tour of the app, so you can get started with playing. Swipe to continue.</string>
	<string name="wiz_text_2">New Game - Click to start a new game and go head to head with the enemy.</string>
	<string name="wiz_text_3">Manage player profiles: customize background images, colors and more.</string>
	<string name="wiz_text_4">Draft - Keep organized with the draft organizer. Enter the name of friends and foes, we\’ll do the rest. The app will keep score and tell you who moves onto the next round, and who goes home crying.</string>
	<string name="wiz_text_5">Settings - Control the elements of your realm.</string>
	<string name="wiz_text_6">Social - Don\’t be a lone wolf. Howl with the pack.  Love the app, shout it loud and proud! We\’d sure as hell love it if you did :-)</string>
    <string name="wiz_text_7">That\’s enough jibber jabber from us. It’s time to get you playing! Swipe to start a new game!</string>
    
    <!-- Edit Wizard -->
    <string name="edit_wizard_text">Welcome to edit player screen! Here you can set a name for your
        player profile, pick a color for the life counter, and select images for the background.
    </string>
    <string name="edit_wizard_text_2">If you decide to customize your back ground (you should it\'s
        awesome!), in the next screen you will be asked to pick a tall and a large picture. The tall
        one will be used in portrait mode, and the large in landscape. You can chose between loading
        an image directly, or crop it to fit the aspect ratio.
    </string>
    <string name="edit_wizard_text_3">From there, you can simply apply changes (it won\'t save
        anything), or save your edited profile. Note that profiles are stored by name so if you
        change the name it will create a new profile. You can also load and edit profiles here. Have
        fun!
    </string>


    <!-- Toasts -->
    <string name="donation_thanks">Thank you! :D</string>
    
    <!-- Front menu -->
    <string name="new_game">New Game</string>
    <string name="profile_menu">Profiles</string>
    <string name="button_settings">Settings</string>
    <string name="tournament">Draft</string>
    <string name="helpus">Social</string>

    <string name="button_pick_images">Pick images</string>
    
    <!-- Help Us Menu -->
    <string name="donations">Donate Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback Us</string>
    <string name="facebook_us">Facebook Us</string>
    <string name="twitter_us">Twitter Us</string>
    <string name="blog_us">Blog Us</string>
    <string name="no_mail_client">There are no email clients installed.</string>
    <string name="send_feedback">Send feedback...</string>
    <string name="feedback_for_version">Feedback for version %s</string>
    
    <!-- Context menu -->
    <string name="string_action_lock">Lock images</string>
    <string name="string_action_settings">Settings</string>
    <string name="string_action_flip">Rotate player 2</string>
    <string name="string_action_restart">Restart</string>
    <string name="string_action_dice">Roll dice</string>
    <string name="string_action_coin">Flip coin</string>
    <string name="string_action_load">Load player</string>
	<string name="string_action_edit">Edit/save players</string>
	<string name="string_action_reset">Reset players</string>
    
    <!-- Settings:keys -->
	<string name="key_background_lock">backgroundLock</string>
	<string name="key_life2">lifeTwo</string>
	<string name="key_life1">lifeOne</string>
	<string name="key_color_p1">colorPlayerOne</string>
	<string name="key_color_p2">colorPlayerTwo</string>
	<string name="key_life_start">lifeTotal</string>
	<string name="key_back1">backOne</string>
    <string name="key_back2">backTwo</string>
    <string name="key_rotate_player2">rotateTwo</string>
    <string name="key_show_buttons">showButtons</string>
    <string name="key_show_wheels">showWheels</string>
    <string name="key_show_poison">showPoison</string>
    <string name="key_show_plaque">showPlaque</string>
    <string name="key_color">fontColor</string>
    <string name="key_hide_wizard">hideWizard</string>
    <string name="key_hide_edit_wizard">hideEditWizard</string>
    <string name="key_current_tournament">currentTournament</string>
    <string name="key_last_tournament">lastTournament</string>
    <string name="key_saved_round">savedRound</string>

	<!-- Settings:text -->
 	<string name="life_total_description">Life you start with</string>
    <string name="game_settings">Game Settings</string>
	<string name="life_total_start">Life total</string>
    <string name="layout_settings">Layout</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="show_buttons">Show Buttons</string>
    <string name="summary_show_buttons">+ and -</string>
    <string name="show_wheels">Show Wheels</string>
    <string name="show_poison">Show Poison</string>
    <string name="color_pick">Default Color</string>
    <string name="pick_a_color">for labels</string>
    <string name="show_plaque">Show Score Plate</string>
    <string name="show_plaque_subtitle">transparent white square under scores</string>

    <!-- Tournament view -->
    <string name="new_player_list">New</string>
    <string name="load_player_list">Load</string>
    <string name="players">Players</string>
    <string name="click_to_edit">Click on the names to edit them.</string>
    <string name="how_many_players">Load previous list of players (Load) or use new players (New)</string>
    <string name="number_of_players">%d Players:</string>
    <string name="add_player">Add a player</string>
    <string name="validate_players">Start</string>
    <string name="Round">Results, round</string>
    <string name="next_round">Next round</string>
    <string name="Submit">Submit</string>
    <string name="validate_round">Please confirm the following results:</string>
</resources>