<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/layout_settings">

        <CheckBoxPreference
            android:key="@string/key_show_plaque"
            android:title="@string/show_plaque"
            android:summary="@string/show_plaque_subtitle"
            android:defaultValue="true"/>

        <CheckBoxPreference
                android:key="@string/key_show_poison"
                android:title="@string/show_poison"
                android:defaultValue="false"/>
        
        <net.margaritov.preference.colorpicker.ColorPickerPreference
		    android:key="@string/key_color"
		    android:title="@string/color_pick"
		    android:summary="@string/pick_a_color"
		    android:defaultValue="@color/lifeText"
		    alphaSlider="true"                              
		/>
        
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/game_settings">

        <EditTextPreference
                android:key="@string/key_life_start"
                android:title="@string/life_total_start"
                android:summary="@string/life_total_description"
                android:dialogTitle="@string/life_total_start"
                android:defaultValue="20" />

    </PreferenceCategory>

</PreferenceScreen>