<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    >
    
    <com.banzz.lifecounter.commons.FontedTextView
        android:id="@+id/close_wizard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:scaleType="center"
        style="@style/NewButtonText"
        android:text="@string/close_wizard_message" />
    
    <CheckBox
        android:id="@+id/never_show_checkbox"
        android:layout_below="@+id/close_wizard_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checked="true"
        android:text="@string/never_show"
    />
    
    <com.banzz.lifecounter.commons.FontedButton
        android:id="@+id/close_wizard_no"
        android:layout_below="@+id/never_show_checkbox"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
		style="@style/DialogButton"
	/>

    <com.banzz.lifecounter.commons.FontedButton
        android:id="@+id/close_wizard_yes"
        android:layout_below="@+id/never_show_checkbox"
        android:layout_toRightOf="@+id/close_wizard_no"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_wizard_title"
		style="@style/DialogButton"
	/>
</RelativeLayout>