<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/front_color_2"
    >
        <ImageView
            android:id="@+id/front_title"
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/title"
        />

        <!-- First button row -->

        <LinearLayout
            android:id="@+id/first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/front_title"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <com.banzz.lifecounter.common.FontedButton
		        android:id="@+id/rate_button"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/rate_us"
    			style="@style/NewButtonText"
				android:drawableTop="@drawable/rate_us"
	        />
	        <com.banzz.lifecounter.common.FontedButton
	            android:id="@+id/feedback_button"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/feedback"
	            style="@style/NewButtonText"
	            android:drawableTop="@drawable/contact_us"
	        />
	        <com.banzz.lifecounter.common.FontedButton
	            android:id="@+id/donation_button"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/donations"
	            style="@style/NewButtonText"
	            android:drawableTop="@drawable/donate_us"
	        />
	    </LinearLayout>
	    
        <!-- Second button row -->
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/first_line"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
	        <com.banzz.lifecounter.common.FontedButton
	            android:id="@+id/blog_button"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/blog_us"
	            style="@style/NewButtonText"
	            android:drawableTop="@drawable/blog_us"
	        />
	        <com.banzz.lifecounter.common.FontedButton
	            android:id="@+id/facebook_button"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/facebook_us"
	            style="@style/NewButtonText"
	            android:drawableTop="@drawable/facebook_us"
	        />
	        <com.banzz.lifecounter.common.FontedButton
	            android:id="@+id/twitter_button"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:text="@string/twitter_us"
	            style="@style/NewButtonText"
	            android:drawableTop="@drawable/twitter_us"
	        />
        </LinearLayout>
        
        <ImageView
            android:id="@+id/bullzzai_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
        />
</RelativeLayout>