<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:text="@string/load_player" />
    
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
	    
	    <RadioButton 
	        android:id="@+id/radio_player_1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/player_1"
		/>
	    <RadioButton android:id="@+id/radio_player_2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/player_2"
	    />
	</RadioGroup>
    
    <Button
	    android:id="@+id/pick_image_button"
	    style="@style/ButtonText"
	    android:background="@drawable/btn_green_matte"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_pick_image"
	    android:layout_gravity="center"
    />
    
    
    <ListView
        android:id="@+id/player_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
     	/>
    
</LinearLayout>