<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoPlayerActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:id="@+id/fullscreen_content_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#333333"
        android:orientation="horizontal"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:id="@+id/player_zero_screen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <ImageView
                android:id="@+id/background_player0"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/edit_player0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textAppearance="@style/ButtonText" />

            <TextView
                android:id="@+id/big_life_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textAppearance="@style/bigLife" />

            <TextView
                android:id="@+id/plus_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/big_life_0"
                android:layout_centerHorizontal="true"
                android:includeFontPadding="false"
                android:text="@string/plus"
                android:textAppearance="@style/bigLife" />

            <TextView
                android:id="@+id/minus_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/big_life_0"
                android:layout_centerHorizontal="true"
                android:includeFontPadding="false"
                android:text="@string/minus"
                android:textAppearance="@style/bigLife" />

            <!--<kankan.wheel.widget.WheelView-->
                <!--android:id="@+id/player_zero"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_alignParentBottom="true" />-->

        </RelativeLayout>

        <!-- EDIT ZONE -->
        <RelativeLayout
            android:id="@+id/edit_controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/edit_player_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:scaleType="center"
                android:text="@string/edit_player"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_centerHorizontal="true"
                android:textColor="#FFFFFF"
            />

            <RadioGroup
                android:id="@+id/edit_radio"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_below="@id/edit_player_id"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_edit_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:textColor="#FFFFFF"
                    android:text="@string/player_1"
                    />

                <RadioButton android:id="@+id/radio_edit_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FFFFFF"
                    android:text="@string/player_2"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/edit_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:scaleType="center"
                android:text="@string/name"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/edit_radio"
                android:layout_alignParentLeft="true"
                android:textColor="#FFFFFF"
                />

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="15dp"
                android:layout_below="@+id/edit_radio"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/edit_name_title"
                android:textColor="#FFFFFF"
            />

            <!--<LinearLayout -->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:visibility="gone"-->
            <!-->-->
                <!--<CheckBox -->
                    <!--android:id="@+id/check_buttons"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                <!--/>-->
                <!---->
                <!--<TextView-->
                    <!--android:id="@+id/label_for_buttons"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:labelFor="@id/check_buttons"-->
                    <!--android:text="@string/show_buttons"-->
                <!--/>        -->
            <!--</LinearLayout>-->
            <!---->
            <!--<LinearLayout -->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:visibility="gone"-->
            <!-->-->
                <!--<CheckBox -->
                    <!--android:id="@+id/check_wheels"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                <!--/>-->
                <!---->
                <!--<TextView-->
                    <!--android:id="@+id/label_for_wheels"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:labelFor="@id/check_wheels"-->
                    <!--android:text="@string/show_wheels"-->
                <!--/>-->
            <!--</LinearLayout>"-->

            <Button
                android:id="@+id/images_button"
                style="@style/ButtonSmall"
                android:background="@drawable/btn_green_matte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_pick_images"
                android:layout_below="@id/edit_name"
                android:layout_gravity="center"
            />

            <Button
                android:id="@+id/color_button"
                style="@style/ButtonText"
                android:background="@drawable/btn_green_matte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/pick_color"
                android:layout_below="@id/images_button"
                android:layout_gravity="center"
            />

            <Button
                android:id="@+id/load_button"
                style="@style/ButtonText"
                android:background="@drawable/btn_green_matte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Load"
                android:layout_marginTop="20dp"
                android:layout_below="@id/color_button"
                android:layout_gravity="center"
            />

            <Button
                android:id="@+id/save_button"
                style="@style/ButtonText"
                android:background="@drawable/btn_green_matte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Save"
                android:layout_marginTop="20dp"
                android:layout_below="@id/load_button"
                android:layout_gravity="center"
            />

            <Button
                android:id="@+id/delete_button"
                style="@style/ButtonText"
                android:background="@drawable/btn_green_matte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Delete"
                android:layout_marginTop="20dp"
                android:layout_below="@id/save_button"
                android:layout_gravity="center"
            />

            <Button
                android:id="@+id/apply_button"
                style="@style/ButtonText"
                android:background="@drawable/btn_green_matte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:layout_marginTop="20dp"
                android:layout_below="@id/delete_button"
                android:layout_gravity="center"
            />
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/activity_edit_player_wizard"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
    />

</RelativeLayout>