<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FrontMenuActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->
		
        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="#000000"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <Button
                android:id="@+id/two_player_button"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/btn_green_matte"
                android:gravity="center_vertical"
                android:text="@string/button_two_players" />
            
            <Button
                android:id="@+id/settings_button"
                style="@style/ButtonText"
                android:background="@drawable/btn_green_matte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_settings"
                android:layout_gravity="center"
                />
            
            <Button
                android:id="@+id/donations_button"
                style="@style/ButtonText"
                android:background="@drawable/btn_green_matte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donations"
                android:layout_gravity="center"
                />
            
            <Button
                android:id="@+id/tournament_button"
                style="@style/ButtonText"
                android:background="@drawable/btn_green_matte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournament"
                android:layout_gravity="center"
                />
            
		</LinearLayout>

</RelativeLayout>